; ModuleID = '/home/carl/AnghaBench/netdata/database/extr_rrdvar.c_rrdvar_custom_variable_create.c'
source_filename = "/home/carl/AnghaBench/netdata/database/extr_rrdvar.c_rrdvar_custom_variable_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NAN = common dso_local global i8 0, align 1
@RRDVAR_TYPE_CALCULATED = common dso_local global i32 0, align 4
@RRDVAR_OPTION_CUSTOM_HOST_VAR = common dso_local global i32 0, align 4
@RRDVAR_OPTION_ALLOCATED = common dso_local global i32 0, align 4
@D_VARIABLES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [94 x i8] c"Requested variable '%s' already exists - possibly 2 plugins are updating it at the same time.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32*, i8*)* @rrdvar_custom_variable_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @rrdvar_custom_variable_create(i8* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %11 = call i8* @callocz(i32 1, i32 1)
  store i8* %11, i8** %7, align 8
  %12 = load i8, i8* @NAN, align 1
  %13 = load i8*, i8** %7, align 8
  store i8 %12, i8* %13, align 1
  %14 = load i8*, i8** %4, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i32, i32* @RRDVAR_TYPE_CALCULATED, align 4
  %18 = load i32, i32* @RRDVAR_OPTION_CUSTOM_HOST_VAR, align 4
  %19 = load i32, i32* @RRDVAR_OPTION_ALLOCATED, align 4
  %20 = or i32 %18, %19
  %21 = load i8*, i8** %7, align 8
  %22 = call i32* @rrdvar_create_and_index(i8* %14, i32* %15, i8* %16, i32 %17, i32 %20, i8* %21)
  store i32* %22, i32** %8, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = icmp ne i32* %23, null
  %25 = xor i1 %24, true
  %26 = zext i1 %25 to i32
  %27 = call i64 @unlikely(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %47

29:                                               ; preds = %3
  %30 = load i8*, i8** %7, align 8
  %31 = call i32 @freez(i8* %30)
  %32 = load i32, i32* @D_VARIABLES, align 4
  %33 = load i8*, i8** %6, align 8
  %34 = call i32 @debug(i32 %32, i8* getelementptr inbounds ([94 x i8], [94 x i8]* @.str, i64 0, i64 0), i8* %33)
  %35 = load i8*, i8** %6, align 8
  %36 = call i8* @strdupz(i8* %35)
  store i8* %36, i8** %9, align 8
  %37 = load i8*, i8** %9, align 8
  %38 = call i32 @rrdvar_fix_name(i8* %37)
  %39 = load i8*, i8** %9, align 8
  %40 = call i32 @simple_hash(i8* %39)
  store i32 %40, i32* %10, align 4
  %41 = load i32*, i32** %5, align 8
  %42 = load i8*, i8** %9, align 8
  %43 = load i32, i32* %10, align 4
  %44 = call i32* @rrdvar_index_find(i32* %41, i8* %42, i32 %43)
  store i32* %44, i32** %8, align 8
  %45 = load i8*, i8** %9, align 8
  %46 = call i32 @freez(i8* %45)
  br label %47

47:                                               ; preds = %29, %3
  %48 = load i32*, i32** %8, align 8
  ret i32* %48
}

declare dso_local i8* @callocz(i32, i32) #1

declare dso_local i32* @rrdvar_create_and_index(i8*, i32*, i8*, i32, i32, i8*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @freez(i8*) #1

declare dso_local i32 @debug(i32, i8*, i8*) #1

declare dso_local i8* @strdupz(i8*) #1

declare dso_local i32 @rrdvar_fix_name(i8*) #1

declare dso_local i32 @simple_hash(i8*) #1

declare dso_local i32* @rrdvar_index_find(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
